--- a/about.html
+++ b/about.html
@@ -30,13 +30,13 @@
                     <a href="about.html" class="nav-menu-link">о фильме</a>
                 </li>
                 <li class="nav-menu-item">
-                    <a href="#" class="nav-menu-link">трейлер</a>
+                    <a href="trailer.html" class="nav-menu-link">трейлер</a>
                 </li>
                 <li class="nav-menu-item">
-                    <a href="#" class="nav-menu-link">актеры</a>
+                    <a href="actors.html" class="nav-menu-link">актеры</a>
                 </li>
                 <li class="nav-menu-item">
-                    <a href="#" class="nav-menu-link">премьера</a>
+                    <a href="premier.html" class="nav-menu-link">премьера</a>
                 </li>
             </ul>
         </nav>
