--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
                     <a href="about.html" class="nav-menu-link">о фильме</a>
                 </li>
                 <li class="nav-menu-item">
-                    <a href="#" class="nav-menu-link">трейлер</a>
+                    <a href="trailer.html" class="nav-menu-link">трейлер</a>
                 </li>
                 <li class="nav-menu-item">
-                    <a href="#" class="nav-menu-link">актеры</a>
+                    <a href="actors.html" class="nav-menu-link">актеры</a>
                 </li>
                 <li class="nav-menu-item">
-                    <a href="#" class="nav-menu-link">премьера</a>
+                    <a href="premier.html" class="nav-menu-link">премьера</a>
                 </li>
             </ul>
         </nav>
@@ -49,7 +49,7 @@
         </div>
         <!-- /.film-text -->
         <div class="button-group">
-            <a data-fancybox href="hhttps://www.youtube.com/watch?v=Othd8W8o3t0" class="button button-primary">
+            <a data-fancybox href="https://www.youtube.com/watch?v=EHaOCkk6KTE" class="button button-primary">
                 <img width="15" src="img/play.svg" alt="icon: play" class="button-icon">
                 <span class="button-text">смотреть трейлер</span>
             </a>
